# geno-term

./: GENO.md  LICENSE  README.md  SKILL.md  genotools.yaml  layer.json  mkdocs.yml  pyproject.toml
.specs/: GOALS.md  TENETS.md  VISION.md
commands/: gt-term-restart.md
docs/: cli-reference.md  getting-started.md  index.md
geno_term/: __init__.py  cli.py  discovery.py  iterm.py  launch.py
skills/geno-term/: SKILL.md
skills/geno-term-sessions-restart/: SKILL.md
