[project]
name = "geno-term"
version = "0.1.0"
description = "Terminal automation for Claude Code session recovery — discover and restart crashed sessions as iTerm2 tabs and panes"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
geno-term = "geno_term.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geno_term*"]
